--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>bubble-bg demo</title>
 		<meta name="theme-color" content="#222222">
 		<script async type="text/javascript" src="background.js"></script>
